인터페이스 제공하는 방식으로 수정

--- a/Profiler/Profiler.vcxproj.filters
+++ b/Profiler/Profiler.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Profiler.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Profiler_Interface.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
