--- a/Profiler/Profiler.vcxproj
+++ b/Profiler/Profiler.vcxproj
@@ -132,6 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Profiler.h" />
+    <ClInclude Include="Profiler_Interface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
